fixed layout issue with app.js

--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,11 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-
+}
 .space {
     height: 100px;
     width: 100px;
-        padding: 0%;
+    padding: 0%;
     margin: 0%;
 }
 
